--- a/package.json
+++ b/package.json
@@ -14,8 +14,10 @@
     "@expo/vector-icons": "^15.0.3",
     "@react-navigation/bottom-tabs": "^7.4.0",
     "@react-navigation/elements": "^2.6.3",
-    "@react-navigation/native": "^7.1.8",
+    "@react-navigation/native": "^7.1.20",
+    "@react-navigation/native-stack": "^7.6.3",
     "expo": "54.0.21",
+    "expo-camera": "~17.0.9",
     "expo-constants": "~18.0.10",
     "expo-dev-client": "~6.0.16",
     "expo-font": "~14.0.9",
