--- a/.gitignore
+++ b/.gitignore
@@ -41,3 +41,9 @@ app-example
 # generated native folders
 /ios
 /android
+
+# Ignore Gradle project-specific cache directory
+.gradle
+
+# Ignore Gradle build output directory
+build
