--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "expo-web-browser": "~15.0.8",
     "react": "19.1.0",
     "react-dom": "19.1.0",
+    "react-icons": "^5.5.0",
     "react-native": "0.81.5",
     "react-native-gesture-handler": "~2.28.0",
     "react-native-linear-gradient": "^2.8.3",
@@ -46,8 +47,10 @@
   "devDependencies": {
     "@react-native-community/cli": "latest",
     "@types/react": "~19.1.0",
+    "@types/react-native-vector-icons": "^6.4.18",
     "eslint": "^9.25.0",
     "eslint-config-expo": "~10.0.0",
+    "react-native-vector-icons": "^10.3.0",
     "typescript": "~5.9.2"
   },
   "private": true
